Take advantage of netty-http-client's ability to not aggregate the whole http response in memory to write chunks to disk as they arrive, enabling this to run in a 10Mb heap