@@ -91,3 +91,17 @@ servers it knows about, and when one succeeds, cancels the others.
 
 Command-line and configuration file management is done [with giulius](https://github.com/timboudreau/giulius).
 
+Footprint
+---------
+
+While the default Java 64Mb heap is preferred, especially if the server will be heavily used, just to prove
+you can run this with a minimal memory footprint, you *can* run it and use it with a 10Mb heap - the following
+command-line sets up a JDK 8 vm appropriately:
+
+        java -XX:-UseConcMarkSweepGC -Xmx12M -DproductionMode=true -jar tiny-maven-proxy.jar --download.chunk.size 256
+
+A bunch of care is taken to ensure as few memory copies as possible are performed, and that downloads are
+read and written chunk by chunk, so the whole file is never dragged into memory at once.
+
+Hopefully this demonstrates what you can do with non-blocking I/O and a bit of care :-)
+
